Switched to using ZGC to reduce the garbage collector issues